--- a/src/css/components/widget.sass
+++ b/src/css/components/widget.sass
@@ -110,12 +110,13 @@
   display: flex
   justify-content: center
   align-items: center
-  height: $button-height
-  width:  $button-height
+  height: 28px
+  width:  28px
+  border-radius: 1e3px // For focus styles
 
 .widget-reset-button-icon
   height: $tiny-icon-height
   width:  $tiny-icon-height
-  color:  $text-200-color
+  color:  $text-400-color
   button:hover &
     color: $text-100-color
